
ChangeLog
 [ + added, - removed, * changed ]
 * 08May2012 Refactored and simplified examples. Usage of Makefile.inc
             extrae-post-installation-upgrade.sh gets alive!
 * 04May2012 Support for NANOS distributed
 + 19Apr2012 Add functionality -task-view -no-task-view in mpi2prv to generate
               traces specially for OMPSs.
             Add Extrae_get_version API call.
             Updated documentation.
 + 18Apr2012 Build of shared libraries on BG/{P,Q}
 + 13Apr2012 Instrumentation of CUDA runtime through DynInst
               Also, support for CUDA+MPI using DynInst. Added an example.
               Removed lib_dyn_omptrace. Using libomptrace instead.
               Minor changes in documentation
 * 02Apr2012 Generation of the PCF file. Static entries now only appear if
               they are present in the tracefile.
 + 30Mar2012 Documented new instrumentation of OpenMP tasks
             Documented alternative libraries to use during instrumentation
               at the quick guide.
 + 30Mar2012 Support to do Extrae_init + MPI_Init (and also MPI_Finalize +
               Extrae_fini)
 + 27Mar2012 Instrumentation of Intel/GNU #pragma omp task
 * 15Mar2012 Fixed versioning number for lib MPI+OMP when using dyninst
             Fixed nesting creation of pthreads.
 + 13Mar2012 Instrumentation for pthread_exit
 * 09Mar2012 Fixes in the #pragma omp parallel sections constructs in icc/gcc.
 * 06Mar2012 First parallel event when thread > 1 was missing its HWC.
             XML parser was looking for sort-address instead of sort-addresses
             within <merge> block.
             Several exit cleanups.
             Documentation is no longer generated at make, but distributed
               in its PS/PDF/HTML forms. This allows having the user-guide
               without needing latex/dvi2ps/dvipdf/latex2html
 * 27Feb2012 Fixes in the instrumentation of worksharings for Intel/OpenMP
 * 24Feb2012 Extrae 2.2.1 is released!